--- a/template/.gitignore
+++ b/template/.gitignore
@@ -1,16 +1,14 @@
-.DS_Store
-/node_modules/
-/dist/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# compiled output
+/dist
 
+# dependencies
+/node_modules
+/bower_components
+
+# misc
+.sass-cache
 .eslintcache
+npm-debug.log*
 
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
+# mac
+.DS_Store
